edit: '!set' command is now using hibernate entities